Fix failing ServiceWorkerVersionBrowserTest on Network Service bots

We needed some work-around as we're giving a loading request associated
with EmbeddedWorkerClient to Network Service's URLLoaderFactory.

BUG=736362

Change-Id: I2e64a93b1699b34146d414f64ee00bc50d5455bc