content/browser/service_worker/service_worker_provider_host.cc
@@ -100,6 +100,44 @@ void RemoveProviderHost(base::WeakPtr<ServiceWorkerContextCore> context,
   context->RemoveProviderHost(process_id, provider_id);
 }
 
+// Wrapps associated request for another associated request.
+class AssociatedURLLoaderWrapper final : public mojom::URLLoader {
+ public:
+  static void CreateLoaderAndStart(
+      mojom::URLLoaderFactory* factory,
+      mojom::URLLoaderAssociatedRequest request,
+      int routing_id,
+      int request_id,
+      uint32_t options,
+      const ResourceRequest& resource_request,
+      mojom::URLLoaderClientPtr client,
+      const net::MutableNetworkTrafficAnnotationTag& traffic_annotation) {
+    mojom::URLLoaderAssociatedPtr associated_ptr;
+    mojom::URLLoaderAssociatedRequest associated_request =
+        mojo::MakeRequest(&associated_ptr);
+    factory->CreateLoaderAndStart(
+        std::move(associated_request), 0 /* routing_id */, 0 /* request_id */,
+        options, resource_request, std::move(client), traffic_annotation);
+    mojo::MakeStrongAssociatedBinding(
+        base::MakeUnique<AssociatedURLLoaderWrapper>(std::move(associated_ptr)),
+        std::move(request));
+  }
+
+  explicit AssociatedURLLoaderWrapper(
+      mojom::URLLoaderAssociatedPtr associated_ptr)
+      : associated_ptr_(std::move(associated_ptr)) {}
+  ~AssociatedURLLoaderWrapper() override {}
+  void FollowRedirect() override { associated_ptr_->FollowRedirect(); }
+  void SetPriority(net::RequestPriority priority,
+                   int intra_priority_value) override {
+    associated_ptr_->SetPriority(priority, intra_priority_value);
+  }
+
+ private:
+  mojom::URLLoaderAssociatedPtr associated_ptr_;
+  DISALLOW_COPY_AND_ASSIGN(AssociatedURLLoaderWrapper);
+};
+
 // Used by a Service Worker for script loading only during the installation
 // time. For now this is just a proxy loader for the network loader.
 // Eventually this should replace the existing URLRequestJob-based request
@@ -226,10 +264,12 @@ class ScriptURLLoaderFactory : public mojom::URLLoaderFactory {
                                 traffic_annotation) override {
     if (!ShouldHandleScriptRequest(resource_request)) {
       // If the request should not be handled by ScriptURLLoader, just
-      // fallback to the network.
+      // fallback to the network. This needs a wrapping as we use different
+      // associated message pipes.
       // TODO(kinuko): Record the reason like what we do with netlog in
       // ServiceWorkerContextRequestHandler.
-      loader_factory_getter_->GetNetworkFactory()->get()->CreateLoaderAndStart(
+      AssociatedURLLoaderWrapper::CreateLoaderAndStart(
+          loader_factory_getter_->GetNetworkFactory()->get(),
           std::move(request), routing_id, request_id, options, resource_request,
           std::move(client), traffic_annotation);
       return;
